Setup template for rust code

--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 mlruns/0
+
+
+# Added by cargo
+
+/target
