--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-genetic_algorithm = "*"
-rand = "*"
+genevo = ">=0.7.1"
+rand = ">=0.8.4"
 
 [lib]
 name = "tranmf"
