--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2021"
 [dependencies]
 genevo = ">=0.7.1"
 ndarray = ">=0.15.6"
+ndarray-stats = "0.5.1"
 rand = ">=0.8.5"
 memory-stats = ">=1.1.0"
-num = ">=0.4.1"
 
 [lib]
 name = "tranmf"
