--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
     "scipy>=1.12.0",
     "mlflow>=2.10.1",
     "setuptools>=69.0.3",
+    "tqdm>=4.66.2",
+    "pillow>=10.2.0",
+    "pytest>=8.0.0",
 ]
 version = "0.1.0"
 
