--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ crate-type = ["cdylib"]
 pyo3 = { version = ">=0.20.2", features = ["extension-module"] }
 numpy = ">=0.20.0"
 ndarray = ">=0.15.6"
+num = ">=0.4.1"
