--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,15 +10,16 @@ authors = [
 ]
 
 dependencies = [
-  "numpy>=1.26.4",
-  "scipy>=1.12.0",
-  "mlflow>=2.10.1",
-  "setuptools>=69.0.3",
-  "tqdm>=4.66.2",
-  "pillow>=10.2.0",
-  "pytest>=8.0.0",
-  "scikit-image>=0.22.0",
-  "opencv-python>=4.9.0.80",
+    "numpy>=1.26.4",
+    "scipy>=1.12.0",
+    "mlflow>=2.10.1",
+    "setuptools>=69.0.3",
+    "tqdm>=4.66.2",
+    "pillow>=10.2.0",
+    "pytest>=8.0.0",
+    "scikit-image>=0.22.0",
+    "opencv-python>=4.9.0.80",
+    "cython>=3.0.8",
 ]
 version = "0.1.0"
 
