--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
     "scikit-image>=0.22.0",
     "opencv-python>=4.9.0.80",
     "cython>=3.0.8",
-    "torchnmf>=0.3.5",
+    "jax[cuda12]>=0.4.25",
+    "optax>=0.1.9",
 ]
 version = "0.1.0"
 
